# ldr.ai

./: .dockerignore  .gitignore  =1.0.0  Dockerfile  LDR_PROJECT_DOC.md  PRD.md  README.md  TODO.md  cloudbuild.yaml  fixed_classified_legal_descriptions.jsonl  line_drawing.dxf  main.py  ocr_legal_description.jsonl  pyproject.toml  replit.nix  requirements.txt  test.dxf
.github/: README.md
.github/workflows/: deploy.yml  pr-validation.yml
.streamlit/: config.toml
