[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.3.5",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "plotly>=6.0.0",
    "pytesseract>=0.3.13",
    "reportlab>=4.3.1",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
]
